--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                      <li class="sidebar-item active ">
                         <a href="index.html" class='sidebar-link'>
                            <i class="fa fa-solid fa-house-user"></i>
-                        <span>Dashboard</span>
+                        <span>dashboard</span>
                         </a>
                      </li>
                      <li class="sidebar-item  has-sub">
