--- a/add_department.html
+++ b/add_department.html
@@ -51,7 +51,7 @@
                         
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-users text-success"></i>
+                            <i class="fa fa-duotone fa-users"></i>
                         <span>Employees</span>
                         </a>
                         <ul class="submenu ">
@@ -65,7 +65,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-table text-success"></i>
+                            <i class="fa fa-regular fa-table"></i>
                         <span>Leave Type</span>
                         </a>
                         <ul class="submenu ">
@@ -79,7 +79,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-table text-success"></i>
+                            <i class="fa fa-regular fa-table"></i>
                         <span>Leave Management</span>
                         </a>
                         <ul class="submenu ">
@@ -99,7 +99,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-user text-success"></i>
+                            <i class="fa fa-solid fa-user"></i>
                         <span>Users</span>
                         </a>
                         <ul class="submenu ">
@@ -113,7 +113,7 @@
                      </li>
                      <li class="sidebar-item ">
                         <a href="reports.html" class='sidebar-link'>
-                        <i class="fa fa-chart-bar text-success"></i>
+                            <i class="fa fa-solid fa-chart-pie"></i>
                         <span>Reports</span>
                         </a>
                      </li>
