--- a/leave_status.html
+++ b/leave_status.html
@@ -33,13 +33,13 @@
                      </li>
                      <li class="sidebar-item ">
                         <a href="apply_leave.html" class='sidebar-link'>
-                        <i class="fa fa-plane text-success"></i>
+                            <i class="fa fa-duotone fa-plane-arrival"></i>
                         <span>Apply Leave</span>
                         </a>
                      </li>
                      <li class="sidebar-item active">
                         <a href="leave_status.html" class='sidebar-link'>
-                        <i class="fa fa-plane text-success"></i>
+                            <i class="fa fa-duotone fa-plane-arrival"></i>
                         <span>Leave Status</span>
                         </a>
                      </li>
