--- a/add_employee.html
+++ b/add_employee.html
@@ -49,7 +49,7 @@
                      
                      <li class="sidebar-item active has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-users text-success"></i>
+                            <i class="fa fa-duotone fa-users"></i>
                         <span>Employees</span>
                         </a>
                         <ul class="submenu ">
@@ -63,7 +63,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-table text-success"></i>
+                            <i class="fa fa-regular fa-table"></i>
                         <span>Leave Type</span>
                         </a>
                         <ul class="submenu ">
@@ -77,7 +77,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-table text-success"></i>
+                            <i class="fa fa-regular fa-table"></i>
                         <span>Leave Management</span>
                         </a>
                         <ul class="submenu ">
@@ -97,7 +97,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-user text-success"></i>
+                            <i class="fa fa-solid fa-user"></i>
                         <span>Users</span>
                         </a>
                         <ul class="submenu ">
@@ -111,7 +111,7 @@
                      </li>
                      <li class="sidebar-item ">
                         <a href="reports.html" class='sidebar-link'>
-                        <i class="fa fa-chart-bar text-success"></i>
+                            <i class="fa fa-solid fa-chart-pie"></i>
                         <span>Reports</span>
                         </a>
                      </li>
