--- a/leave_details.html
+++ b/leave_details.html
@@ -34,7 +34,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-building text-success"></i>
+                           <i class="fa fa-sharp fa-solid fa-building"></i>
                         <span>Department</span>
                         </a>
                         <ul class="submenu ">
@@ -76,7 +76,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-table text-success"></i>
+                           <i class="fa fa-regular fa-table"></i>
                         <span>Leave Type</span>
                         </a>
                         <ul class="submenu ">
@@ -90,7 +90,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-table text-success"></i>
+                           <i class="fa fa-regular fa-table"></i>
                         <span>Leave Management</span>
                         </a>
                         <ul class="submenu ">
@@ -110,7 +110,7 @@
                      </li>
                      <li class="sidebar-item  has-sub">
                         <a href="#" class='sidebar-link'>
-                        <i class="fa fa-user text-success"></i>
+                           <i class="fa fa-solid fa-user"></i>
                         <span>Users</span>
                         </a>
                         <ul class="submenu ">
@@ -124,7 +124,7 @@
                      </li>
                      <li class="sidebar-item ">
                         <a href="reports.html" class='sidebar-link'>
-                        <i class="fa fa-chart-bar text-success"></i>
+                           <i class="fa fa-solid fa-chart-pie"></i>
                         <span>Reports</span>
                         </a>
                      </li>
